--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "tailwindcss": "^3.2.4",
     "postcss": "^8.4.19"
   },
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "s": "eleventy --serve",
     "serve": "eleventy --serve",
     "bw": "tailwindcss -i ./src/css/tailwind.css -o ./_site/css/style.css --watch",
     "build:prod": "eleventy && tailwindcss -i ./src/css/tailwind.css -o ./_site/css/style.css --minify"
