--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "dependencies": {
     "@11ty/eleventy": "^1.0.2",
     "@11ty/eleventy-navigation": "^0.1.6",
-    "tailwindcss": "^3.2.4",
-    "postcss": "^8.4.19"
+    "concurrently": "^7.6.0",
+    "postcss": "^8.4.19",
+    "tailwindcss": "^3.2.4"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
